[project]
name = "rent-scraper"
version = "1.0.0"
description = "A project for tracking rentals across Australia with webscraping"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "selenium>=4.23.1",
    "tqdm>=4.66.5",
    "requests>=2.32.3",
    "peewee>=3.19.0",
    "psycopg2-binary>=2.9.11",
    "selenium-stealth>=1.0.6",
]

[project.scripts]
search = "rent_scraper.search:search"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
